--- a/art/paintings.html
+++ b/art/paintings.html
@@ -384,7 +384,6 @@ oil on canvas, 60x60, 2020
       <h2>Sold</h2>
       <div class="gallery">
 
-
 <figure class="painting" data-category="sold" data-title="996 Includes an Afternoon Nap"
         data-medium="oil on canvas" data-size="36x24" data-year="2019"
         data-full="996-36x24.jpg">
@@ -453,6 +452,209 @@ oil on canvas, 60x60, 2020
         data-full="growin-18x18.jpg">
   <img src="growin-18x18.jpg" alt="Growin Thumbnail">
   <figcaption><strong>Growin</strong><br>oil on canvas, 18x18, ???</figcaption>
+</figure>
+
+<figure class="painting" data-category="sold" data-title="Hollywood"
+        data-medium="oil on canvas" data-size="30x30" data-year="2013"
+        data-full="hollywood2-30x30.jpg">
+  <img src="hollywood2-30x30.jpg" alt="Hollywood Thumbnail">
+  <figcaption><strong>Hollywood</strong><br>oil on canvas, 30x30, 2013</figcaption>
+</figure>
+
+<figure class="painting" data-category="sold" data-title="Syndrome"
+        data-medium="oil on canvas" data-size="36x36" data-year="2013"
+        data-full="kiss1-36x36.jpg">
+  <img src="kiss1-36x36.jpg" alt="Syndrome Thumbnail">
+  <figcaption><strong>Syndrome</strong><br>oil on canvas, 36x36, 2013</figcaption>
+</figure>
+
+<figure class="painting" data-category="sold" data-title="Homework"
+        data-medium="oil on canvas" data-size="36x36" data-year="2014"
+        data-full="kiss4-36x36.jpg">
+  <img src="kiss4-36x36.jpg" alt="Homework Thumbnail">
+  <figcaption><strong>Homework</strong><br>oil on canvas, 36x36, 2014</figcaption>
+</figure>
+
+<figure class="painting" data-category="sold" data-title="Bayesian Inference"
+        data-medium="oil on canvas" data-size="36x36" data-year="2012"
+        data-full="laptop-36x36.jpg">
+  <img src="laptop-36x36.jpg" alt="Bayesian Inference Thumbnail">
+  <figcaption><strong>Bayesian Inference</strong><br>oil on canvas, 36x36, 2012</figcaption>
+</figure>
+
+<figure class="painting" data-category="sold" data-title="Lime"
+        data-medium="oil on canvas" data-size="30x30" data-year="2021"
+        data-full="lime-30x30.jpg">
+  <img src="lime-30x30.jpg" alt="Lime Thumbnail">
+  <figcaption><strong>Lime</strong><br>oil on canvas, 30x30, 2021</figcaption>
+</figure>
+
+<figure class="painting" data-category="sold" data-title="Make America Great Again"
+        data-medium="oil on canvas" data-size="30x40" data-year="2018"
+        data-full="maga-30x40.jpg">
+  <img src="maga-30x40.jpg" alt="Make America Great Again Thumbnail">
+  <figcaption><strong>Make America Great Again</strong><br>oil on canvas, 30x40, 2018</figcaption>
+</figure>
+
+<figure class="painting" data-category="sold" data-title="Mao"
+        data-medium="oil on canvas" data-size="20x40" data-year="2022"
+        data-full="mao-20x40.png">
+  <img src="mao-20x40.png" alt="Mao Thumbnail">
+  <figcaption><strong>Mao</strong><br>oil on canvas, 20x40, 2022</figcaption>
+</figure>
+
+<figure class="painting" data-category="sold" data-title="Yùeeguāng"
+        data-medium="oil on canvas" data-size="40x30" data-year="2019"
+        data-full="moon1-40x30.jpg">
+  <img src="moon1-40x30.jpg" alt="Yùeeguāng Thumbnail">
+  <figcaption><strong>Yùeeguāng</strong><br>oil on canvas, 40x30, 2019</figcaption>
+</figure>
+
+<figure class="painting" data-category="sold" data-title="Moon Surf"
+        data-medium="oil on canvas" data-size="30x30" data-year="???"
+        data-full="moonsurf-30x30.jpg">
+  <img src="moonsurf-30x30.jpg" alt="Moon Surf Thumbnail">
+  <figcaption><strong>Moon Surf</strong><br>oil on canvas, 30x30, ???</figcaption>
+</figure>
+
+<figure class="painting" data-category="sold" data-title="Mountains"
+        data-medium="oil on canvas" data-size="30x30" data-year="2019"
+        data-full="mountains-30x30.jpg">
+  <img src="mountains-30x30.jpg" alt="Mountains Thumbnail">
+  <figcaption><strong>Mountains</strong><br>oil on canvas, 30x30, 2019</figcaption>
+</figure>
+
+<figure class="painting" data-category="sold" data-title="Mt. Fuji"
+        data-medium="oil on canvas" data-size="30x30" data-year="2013"
+        data-full="mt-fuji-30x30.jpg">
+  <img src="mt-fuji-30x30.jpg" alt="Mt. Fuji Thumbnail">
+  <figcaption><strong>Mt. Fuji</strong><br>oil on canvas, 30x30, 2013</figcaption>
+</figure>
+
+<figure class="painting" data-category="sold" data-title="Pure"
+        data-medium="oil on canvas" data-size="36x36" data-year="???"
+        data-full="pure-36x36.jpg">
+  <img src="pure-36x36.jpg" alt="Pure Thumbnail">
+  <figcaption><strong>Pure</strong><br>oil on canvas, 36x36, ???</figcaption>
+</figure>
+
+<figure class="painting" data-category="sold" data-title="Bird on Bamboo"
+        data-medium="oil on canvas" data-size="30x30" data-year="2015"
+        data-full="robin-30x30.jpg">
+  <img src="robin-30x30.jpg" alt="Bird on Bamboo Thumbnail">
+  <figcaption><strong>Bird on Bamboo</strong><br>oil on canvas, 30x30, 2015</figcaption>
+</figure>
+
+<figure class="painting" data-category="sold" data-title="Romance Contains Chemicals"
+        data-medium="oil on canvas" data-size="18x18" data-year="2020"
+        data-full="romance-18x18.jpg">
+  <img src="romance-18x18.jpg" alt="Romance Contains Chemicals Thumbnail">
+  <figcaption><strong>Romance Contains Chemicals</strong><br>oil on canvas, 18x18, 2020</figcaption>
+</figure>
+
+<figure class="painting" data-category="sold" data-title="She Did the Math"
+        data-medium="oil on canvas" data-size="60x40" data-year="2020"
+        data-full="she-did-the-math-60x40.jpg">
+  <img src="she-did-the-math-60x40.jpg" alt="She Did the Math Thumbnail">
+  <figcaption><strong>She Did the Math</strong><br>oil on canvas, 60x40, 2020</figcaption>
+</figure>
+
+<figure class="painting" data-category="sold" data-title="Snowprints2"
+        data-medium="oil on canvas" data-size="30x30" data-year="???"
+        data-full="snowprints2-30x30.jpg">
+  <img src="snowprints2-30x30.jpg" alt="Snowprints2 Thumbnail">
+  <figcaption><strong>Snowprints2</strong><br>oil on canvas, 30x30, ???</figcaption>
+</figure>
+
+<figure class="painting" data-category="sold" data-title="Storms"
+        data-medium="oil on canvas" data-size="36x36" data-year="2014"
+        data-full="storms-36x36.jpg">
+  <img src="storms-36x36.jpg" alt="Storms Thumbnail">
+  <figcaption><strong>Storms</strong><br>oil on canvas, 36x36, 2014</figcaption>
+</figure>
+
+<figure class="painting" data-category="sold" data-title="GSD"
+        data-medium="oil on canvas" data-size="24x36" data-year="2014"
+        data-full="tall-24x36.jpg">
+  <img src="tall-24x36.jpg" alt="GSD Thumbnail">
+  <figcaption><strong>GSD</strong><br>oil on canvas, 24x36, 2014</figcaption>
+</figure>
+
+<figure class="painting" data-category="sold" data-title="Tiger"
+        data-medium="oil on canvas" data-size="12x36" data-year="???"
+        data-full="tiger-12x36.jpg">
+  <img src="tiger-12x36.jpg" alt="Tiger Thumbnail">
+  <figcaption><strong>Tiger</strong><br>oil on canvas, 12x36, ???</figcaption>
+</figure>
+
+<figure class="painting" data-category="sold" data-title="Tiger"
+        data-medium="oil on canvas" data-size="30x30" data-year="???"
+        data-full="tiger-30x30.jpg">
+  <img src="tiger-30x30.jpg" alt="Tiger Thumbnail">
+  <figcaption><strong>Tiger</strong><br>oil on canvas, 30x30, ???</figcaption>
+</figure>
+
+<figure class="painting" data-category="sold" data-title="Morning Train"
+        data-medium="oil on canvas" data-size="36x36" data-year="2014"
+        data-full="train-36x36.jpg">
+  <img src="train-36x36.jpg" alt="Morning Train Thumbnail">
+  <figcaption><strong>Morning Train</strong><br>oil on canvas, 36x36, 2014</figcaption>
+</figure>
+
+<figure class="painting" data-category="sold" data-title="Big Head Surfer"
+        data-medium="oil on canvas" data-size="40x30" data-year="2019"
+        data-full="tyler-40x30.png">
+  <img src="tyler-40x30.png" alt="Big Head Surfer Thumbnail">
+  <figcaption><strong>Big Head Surfer</strong><br>oil on canvas, 40x30, 2019</figcaption>
+</figure>
+
+<figure class="painting" data-category="sold" data-title="Use Social Media, Keep Location Services On"
+        data-medium="oil on canvas" data-size="30x40" data-year="2014"
+        data-full="use-social-media-30x40.png">
+  <img src="use-social-media-30x40.png" alt="Use Social Media, Keep Location Services On Thumbnail">
+  <figcaption><strong>Use Social Media, Keep Location Services On</strong><br>oil on canvas, 30x40, 2014</figcaption>
+</figure>
+
+<figure class="painting" data-category="sold" data-title="Veni Vidi Vici"
+        data-medium="oil on canvas" data-size="36x36" data-year="???"
+        data-full="veni-vidi-vici-36x36.jpg">
+  <img src="veni-vidi-vici-36x36.jpg" alt="Veni Vidi Vici Thumbnail">
+  <figcaption><strong>Veni Vidi Vici</strong><br>oil on canvas, 36x36, ???</figcaption>
+</figure>
+
+<figure class="painting" data-category="sold" data-title="Warmly Welcome the Success of the Explosion of Our First H-Bomb 1952!"
+        data-medium="oil on canvas" data-size="40x30" data-year="2018"
+        data-full="welcome-success-of-first-bomb-40x30.jpg">
+  <img src="welcome-success-of-first-bomb-40x30.jpg" alt="Warmly Welcome the Success of the Explosion of Our First H-Bomb 1952! Thumbnail">
+  <figcaption><strong>Warmly Welcome the Success of the Explosion of Our First H-Bomb 1952!</strong><br>oil on canvas, 40x30, 2018</figcaption>
+</figure>
+
+<figure class="painting" data-category="sold" data-title="Wolverine"
+        data-medium="oil on canvas" data-size="30x30" data-year="???"
+        data-full="wolverine-30x30.jpg">
+  <img src="wolverine-30x30.jpg" alt="Wolverine Thumbnail">
+  <figcaption><strong>Wolverine</strong><br>oil on canvas, 30x30, ???</figcaption>
+</figure>
+
+<figure class="painting" data-category="sold" data-title="Work Like a Dog"
+        data-medium="oil on canvas" data-size="36x36" data-year="???"
+        data-full="work-like-a-dog-36x36.jpg">
+  <img src="work-like-a-dog-36x36.jpg" alt="Work Like a Dog Thumbnail">
+  <figcaption><strong>Work Like a Dog</strong><br>oil on canvas, 36x36, ???</figcaption>
+</figure>
+
+<figure class="painting" data-category="sold" data-title="Faded in the Optim"
+        data-medium="oil on canvas" data-size="40x30" data-year="2021"
+        data-full="xavi-40x30.jpg">
+  <img src="xavi-40x30.jpg" alt="Faded in the Optim Thumbnail">
+  <figcaption><strong>Faded in the Optim</strong><br>oil on canvas, 40x30, 2021</figcaption>
+</figure>
+
+<figure class="painting" data-category="sold" data-title="You Said All the Wrong Things"
+        data-medium="oil on canvas" data-size="30x15" data-year="2014"
+        data-full="you-said-all-the-wrong-things-30x15.jpg">
+  <img src="you-said-all-the-wrong-things-30x15.jpg" alt="You Said All the Wrong Things Thumbnail">
+  <figcaption><strong>You Said All the Wrong Things</strong><br>oil on canvas, 30x15, 2014</figcaption>
 </figure>
 
         
