--- a/art/paintings.html
+++ b/art/paintings.html
@@ -383,7 +383,6 @@ oil on canvas, 60x60, 2020
     <section id="sold">
       <h2>Sold</h2>
       <div class="gallery">
-
 <figure class="painting" data-category="sold" data-title="996 Includes an Afternoon Nap"
         data-medium="oil on canvas" data-size="36x24" data-year="2019"
         data-full="996-36x24.jpg">
@@ -448,10 +447,10 @@ oil on canvas, 60x60, 2020
 </figure>
 
 <figure class="painting" data-category="sold" data-title="Growin"
-        data-medium="oil on canvas" data-size="18x18" data-year="???"
+        data-medium="oil on canvas" data-size="18x18" data-year="2024"
         data-full="growin-18x18.jpg">
   <img src="growin-18x18.jpg" alt="Growin Thumbnail">
-  <figcaption><strong>Growin</strong><br>oil on canvas, 18x18, ???</figcaption>
+  <figcaption><strong>Growin</strong><br>oil on canvas, 18x18, 2024</figcaption>
 </figure>
 
 <figure class="painting" data-category="sold" data-title="Hollywood"
@@ -461,18 +460,18 @@ oil on canvas, 60x60, 2020
   <figcaption><strong>Hollywood</strong><br>oil on canvas, 30x30, 2013</figcaption>
 </figure>
 
-<figure class="painting" data-category="sold" data-title="Syndrome"
+<figure class="painting" data-category="sold" data-title="Kiss 1"
         data-medium="oil on canvas" data-size="36x36" data-year="2013"
         data-full="kiss1-36x36.jpg">
-  <img src="kiss1-36x36.jpg" alt="Syndrome Thumbnail">
-  <figcaption><strong>Syndrome</strong><br>oil on canvas, 36x36, 2013</figcaption>
+  <img src="kiss1-36x36.jpg" alt="Kiss 1 Thumbnail">
+  <figcaption><strong>Kiss 1</strong><br>oil on canvas, 36x36, 2013</figcaption>
 </figure>
 
-<figure class="painting" data-category="sold" data-title="Homework"
+<figure class="painting" data-category="sold" data-title="Kiss 4"
         data-medium="oil on canvas" data-size="36x36" data-year="2014"
         data-full="kiss4-36x36.jpg">
-  <img src="kiss4-36x36.jpg" alt="Homework Thumbnail">
-  <figcaption><strong>Homework</strong><br>oil on canvas, 36x36, 2014</figcaption>
+  <img src="kiss4-36x36.jpg" alt="Kiss 4 Thumbnail">
+  <figcaption><strong>Kiss 4</strong><br>oil on canvas, 36x36, 2014</figcaption>
 </figure>
 
 <figure class="painting" data-category="sold" data-title="Bayesian Inference"
@@ -503,18 +502,18 @@ oil on canvas, 60x60, 2020
   <figcaption><strong>Mao</strong><br>oil on canvas, 20x40, 2022</figcaption>
 </figure>
 
-<figure class="painting" data-category="sold" data-title="Yùeeguāng"
+<figure class="painting" data-category="sold" data-title="Yùeguāng"
         data-medium="oil on canvas" data-size="40x30" data-year="2019"
         data-full="moon1-40x30.jpg">
-  <img src="moon1-40x30.jpg" alt="Yùeeguāng Thumbnail">
-  <figcaption><strong>Yùeeguāng</strong><br>oil on canvas, 40x30, 2019</figcaption>
+  <img src="moon1-40x30.jpg" alt="Yùeguāng Thumbnail">
+  <figcaption><strong>Yùeguāng</strong><br>oil on canvas, 40x30, 2019</figcaption>
 </figure>
 
 <figure class="painting" data-category="sold" data-title="Moon Surf"
-        data-medium="oil on canvas" data-size="30x30" data-year="???"
+        data-medium="oil on canvas" data-size="30x30" data-year="2024"
         data-full="moonsurf-30x30.jpg">
   <img src="moonsurf-30x30.jpg" alt="Moon Surf Thumbnail">
-  <figcaption><strong>Moon Surf</strong><br>oil on canvas, 30x30, ???</figcaption>
+  <figcaption><strong>Moon Surf</strong><br>oil on canvas, 30x30, 2024</figcaption>
 </figure>
 
 <figure class="painting" data-category="sold" data-title="Mountains"
@@ -532,10 +531,10 @@ oil on canvas, 60x60, 2020
 </figure>
 
 <figure class="painting" data-category="sold" data-title="Pure"
-        data-medium="oil on canvas" data-size="36x36" data-year="???"
+        data-medium="oil on canvas" data-size="36x36" data-year="2015"
         data-full="pure-36x36.jpg">
   <img src="pure-36x36.jpg" alt="Pure Thumbnail">
-  <figcaption><strong>Pure</strong><br>oil on canvas, 36x36, ???</figcaption>
+  <figcaption><strong>Pure</strong><br>oil on canvas, 36x36, 2015</figcaption>
 </figure>
 
 <figure class="painting" data-category="sold" data-title="Bird on Bamboo"
@@ -559,11 +558,11 @@ oil on canvas, 60x60, 2020
   <figcaption><strong>She Did the Math</strong><br>oil on canvas, 60x40, 2020</figcaption>
 </figure>
 
-<figure class="painting" data-category="sold" data-title="Snowprints2"
-        data-medium="oil on canvas" data-size="30x30" data-year="???"
+<figure class="painting" data-category="sold" data-title="Snowprints 2"
+        data-medium="oil on canvas" data-size="30x30" data-year="2022"
         data-full="snowprints2-30x30.jpg">
-  <img src="snowprints2-30x30.jpg" alt="Snowprints2 Thumbnail">
-  <figcaption><strong>Snowprints2</strong><br>oil on canvas, 30x30, ???</figcaption>
+  <img src="snowprints2-30x30.jpg" alt="Snowprints 2 Thumbnail">
+  <figcaption><strong>Snowprints 2</strong><br>oil on canvas, 30x30, 2022</figcaption>
 </figure>
 
 <figure class="painting" data-category="sold" data-title="Storms"
@@ -581,17 +580,17 @@ oil on canvas, 60x60, 2020
 </figure>
 
 <figure class="painting" data-category="sold" data-title="Tiger"
-        data-medium="oil on canvas" data-size="12x36" data-year="???"
+        data-medium="oil on canvas" data-size="12x36" data-year="2014"
         data-full="tiger-12x36.jpg">
   <img src="tiger-12x36.jpg" alt="Tiger Thumbnail">
-  <figcaption><strong>Tiger</strong><br>oil on canvas, 12x36, ???</figcaption>
+  <figcaption><strong>Tiger</strong><br>oil on canvas, 12x36, 2014</figcaption>
 </figure>
 
-<figure class="painting" data-category="sold" data-title="Tiger"
-        data-medium="oil on canvas" data-size="30x30" data-year="???"
+<figure class="painting" data-category="sold" data-title="Cat"
+        data-medium="oil on canvas" data-size="30x30" data-year="2024"
         data-full="tiger-30x30.jpg">
-  <img src="tiger-30x30.jpg" alt="Tiger Thumbnail">
-  <figcaption><strong>Tiger</strong><br>oil on canvas, 30x30, ???</figcaption>
+  <img src="tiger-30x30.jpg" alt="Cat Thumbnail">
+  <figcaption><strong>Cat</strong><br>oil on canvas, 30x30, 2024</figcaption>
 </figure>
 
 <figure class="painting" data-category="sold" data-title="Morning Train"
@@ -616,10 +615,10 @@ oil on canvas, 60x60, 2020
 </figure>
 
 <figure class="painting" data-category="sold" data-title="Veni Vidi Vici"
-        data-medium="oil on canvas" data-size="36x36" data-year="???"
+        data-medium="oil on canvas" data-size="36x36" data-year="2014"
         data-full="veni-vidi-vici-36x36.jpg">
   <img src="veni-vidi-vici-36x36.jpg" alt="Veni Vidi Vici Thumbnail">
-  <figcaption><strong>Veni Vidi Vici</strong><br>oil on canvas, 36x36, ???</figcaption>
+  <figcaption><strong>Veni Vidi Vici</strong><br>oil on canvas, 36x36, 2014</figcaption>
 </figure>
 
 <figure class="painting" data-category="sold" data-title="Warmly Welcome the Success of the Explosion of Our First H-Bomb 1952!"
@@ -630,17 +629,17 @@ oil on canvas, 60x60, 2020
 </figure>
 
 <figure class="painting" data-category="sold" data-title="Wolverine"
-        data-medium="oil on canvas" data-size="30x30" data-year="???"
+        data-medium="oil on canvas" data-size="30x30" data-year="2017"
         data-full="wolverine-30x30.jpg">
   <img src="wolverine-30x30.jpg" alt="Wolverine Thumbnail">
-  <figcaption><strong>Wolverine</strong><br>oil on canvas, 30x30, ???</figcaption>
+  <figcaption><strong>Wolverine</strong><br>oil on canvas, 30x30, 2017</figcaption>
 </figure>
 
 <figure class="painting" data-category="sold" data-title="Work Like a Dog"
-        data-medium="oil on canvas" data-size="36x36" data-year="???"
+        data-medium="oil on canvas" data-size="36x36" data-year="2013"
         data-full="work-like-a-dog-36x36.jpg">
   <img src="work-like-a-dog-36x36.jpg" alt="Work Like a Dog Thumbnail">
-  <figcaption><strong>Work Like a Dog</strong><br>oil on canvas, 36x36, ???</figcaption>
+  <figcaption><strong>Work Like a Dog</strong><br>oil on canvas, 36x36, 2013</figcaption>
 </figure>
 
 <figure class="painting" data-category="sold" data-title="Faded in the Optim"
@@ -656,6 +655,7 @@ oil on canvas, 60x60, 2020
   <img src="you-said-all-the-wrong-things-30x15.jpg" alt="You Said All the Wrong Things Thumbnail">
   <figcaption><strong>You Said All the Wrong Things</strong><br>oil on canvas, 30x15, 2014</figcaption>
 </figure>
+
 
         
 
