--- a/art/paintings.html
+++ b/art/paintings.html
@@ -121,7 +121,6 @@ oil on canvas, 60x60, 2020
     <section id="available">
       <h2>Available</h2>
       <div class="gallery">
-
 <figure class="painting" data-category="available" data-title="Protect Your Work"
         data-medium="oil on canvas" data-size="30x30" data-year="2016"
         data-full="arxiv-30x30.jpg">
@@ -208,8 +207,8 @@ oil on canvas, 60x60, 2020
 
 <figure class="painting" data-category="available" data-title="Close Up"
         data-medium="oil on canvas" data-size="28x22" data-year="2019"
-        data-full="close-up-28x22.png">
-  <img src="close-up-28x22.png" alt="Close Up Thumbnail">
+        data-full="close-up-28x22.jpg">
+  <img src="close-up-28x22.jpg" alt="Close Up Thumbnail">
   <figcaption><strong>Close Up</strong><br>oil on canvas, 28x22, 2019</figcaption>
 </figure>
 
@@ -250,8 +249,8 @@ oil on canvas, 60x60, 2020
 
 <figure class="painting" data-category="available" data-title="Crawford 1"
         data-medium="oil on canvas" data-size="28x22" data-year="2019"
-        data-full="crawford1-28x22.png">
-  <img src="crawford1-28x22.png" alt="Crawford 1 Thumbnail">
+        data-full="crawford1-28x22.jpg">
+  <img src="crawford1-28x22.jpg" alt="Crawford 1 Thumbnail">
   <figcaption><strong>Crawford 1</strong><br>oil on canvas, 28x22, 2019</figcaption>
 </figure>
 
@@ -430,11 +429,11 @@ oil on canvas, 60x60, 2020
   <figcaption><strong>High Heels</strong><br>oil on canvas, 36x24, 2015</figcaption>
 </figure>
 
-<figure class="painting" data-category="available" data-title="Hollywood 3"
+<figure class="painting" data-category="available" data-title="Hollywood 0"
         data-medium="oil on canvas" data-size="30x30" data-year="2022"
         data-full="hollywood0-30x30.jpg">
-  <img src="hollywood0-30x30.jpg" alt="Hollywood 3 Thumbnail">
-  <figcaption><strong>Hollywood 3</strong><br>oil on canvas, 30x30, 2022</figcaption>
+  <img src="hollywood0-30x30.jpg" alt="Hollywood 0 Thumbnail">
+  <figcaption><strong>Hollywood 0</strong><br>oil on canvas, 30x30, 2022</figcaption>
 </figure>
 
 <figure class="painting" data-category="available" data-title="Hollywood 1"
@@ -656,8 +655,8 @@ oil on canvas, 60x60, 2020
 
 <figure class="painting" data-category="available" data-title="Shoulder"
         data-medium="oil on canvas" data-size="20x16" data-year="2014"
-        data-full="shoulder-20x16.png">
-  <img src="shoulder-20x16.png" alt="Shoulder Thumbnail">
+        data-full="shoulder-20x16.jpg">
+  <img src="shoulder-20x16.jpg" alt="Shoulder Thumbnail">
   <figcaption><strong>Shoulder</strong><br>oil on canvas, 20x16, 2014</figcaption>
 </figure>
 
@@ -712,15 +711,15 @@ oil on canvas, 60x60, 2020
 
 <figure class="painting" data-category="available" data-title="Spider Monkey Layer"
         data-medium="oil on canvas" data-size="30x30" data-year="2019"
-        data-full="spider-monkey-layer-30x30.png">
-  <img src="spider-monkey-layer-30x30.png" alt="Spider Monkey Layer Thumbnail">
+        data-full="spider-monkey-layer-30x30.jpg">
+  <img src="spider-monkey-layer-30x30.jpg" alt="Spider Monkey Layer Thumbnail">
   <figcaption><strong>Spider Monkey Layer</strong><br>oil on canvas, 30x30, 2019</figcaption>
 </figure>
 
 <figure class="painting" data-category="available" data-title="Movie Review"
         data-medium="oil on canvas" data-size="30x30" data-year="2021"
-        data-full="star-wars-is-pretty-good-30x30.JPG">
-  <img src="star-wars-is-pretty-good-30x30.JPG" alt="Movie Review Thumbnail">
+        data-full="star-wars-is-pretty-good-30x30.jpg">
+  <img src="star-wars-is-pretty-good-30x30.jpg" alt="Movie Review Thumbnail">
   <figcaption><strong>Movie Review</strong><br>oil on canvas, 30x30, 2021</figcaption>
 </figure>
 
@@ -858,7 +857,6 @@ oil on canvas, 60x60, 2020
 </figure>
 
 
-
         
       </div>
     </section>
@@ -867,6 +865,53 @@ oil on canvas, 60x60, 2020
     <section id="sold">
       <h2>Sold</h2>
       <div class="gallery">
+
+
+        
+
+<figure class="painting" data-category="sold" data-title="Los Angeles"
+        data-medium="oil on canvas" data-size="42x24" data-year="2023"
+        data-full="los-angeles-42x24.jpg">
+  <img src="los-angeles-42x24.jpg" alt="Los Angeles Thumbnail">
+  <figcaption><strong>Los Angeles</strong><br>oil on canvas, 42x24, 2023</figcaption>
+</figure>
+
+<figure class="painting" data-category="sold" data-title="Quaking Aspen"
+        data-medium="oil on canvas" data-size="28x22" data-year="2023"
+        data-full="quaking-aspen-28x22.jpg">
+  <img src="quaking-aspen-28x22.jpg" alt="Quaking Aspen Thumbnail">
+  <figcaption><strong>Quaking Aspen</strong><br>oil on canvas, 28x22, 2023</figcaption>
+</figure>
+
+<figure class="painting" data-category="sold" data-title="Snow"
+        data-medium="oil on canvas" data-size="36x36" data-year="2015"
+        data-full="snow-36x36.jpg">
+  <img src="snow-36x36.jpg" alt="Snow Thumbnail">
+  <figcaption><strong>Snow</strong><br>oil on canvas, 36x36, 2015</figcaption>
+</figure>
+
+<figure class="painting" data-category="sold" data-title="Forza"
+        data-medium="oil on canvas" data-size="36x36" data-year="2022"
+        data-full="forza-36x36.jpg">
+  <img src="forza-36x36.jpg" alt="Forza Thumbnail">
+  <figcaption><strong>Forza</strong><br>oil on canvas, 36x36, 2022</figcaption>
+</figure>
+
+<figure class="painting" data-category="sold" data-title="Ballona Lagoon"
+        data-medium="oil on canvas" data-size="24x48" data-year="2019"
+        data-full="lagoon-24x48.jpg">
+  <img src="lagoon-24x48.jpg" alt="Ballona Lagoon Thumbnail">
+  <figcaption><strong>Ballona Lagoon</strong><br>oil on canvas, 24x48, 2019</figcaption>
+</figure>
+
+<figure class="painting" data-category="sold" data-title="Ballona Lagoon"
+        data-medium="oil on canvas" data-size="24x48" data-year="2019"
+        data-full="lagoon-24x48.jpg">
+  <img src="lagoon-24x48.jpg" alt="Ballona Lagoon Thumbnail">
+  <figcaption><strong>Ballona Lagoon</strong><br>oil on canvas, 24x48, 2019</figcaption>
+</figure>
+
+
 <figure class="painting" data-category="sold" data-title="996 Includes an Afternoon Nap"
         data-medium="oil on canvas" data-size="36x24" data-year="2019"
         data-full="996-36x24.jpg">
