--- a/art/book.html
+++ b/art/book.html
@@ -14,23 +14,18 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="paintings.html">Paintings</a></li>
         <li><a href="https://kevincrawfordknight.github.io/vita/CV_Knight.pdf" target="_blank">CV</a></li>
-        <li><a href="book.html" target="_blank">Book</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
-    <h1 class="page-title">Contact</h1>
+    <div class="hero">
+      <img src="in-theory-cover-final2.png" alt="Kevin Knight" class="headshot">
+      <h1>Kevin Knight</h1>
+    </div>
   </header>
 
   <!-- Main content -->
   <main>
-    <center>
-      <p>artist contact:</p>
-      <br>
-    <p>kevin.crawford.knight@gmail.com</p> 
-      <br><br>
-    <p>purchase inquiries:</p>
-      <br>
-    <p>in.theory.originals@gmail.com</p>
-    </center>
+    <p class="intro">Available on Amazon.</p>
   </main>
 
   <!-- Footer -->
@@ -39,3 +34,4 @@
   </footer>
 </body>
 </html>
+
