--- a/art/paintings.html
+++ b/art/paintings.html
@@ -633,11 +633,11 @@ oil on canvas, 60x60, 2020
   <figcaption><strong>Phone 2</strong><br>oil on canvas, 40x30, 2013</figcaption>
 </figure>
 
-<figure class="painting" data-category="available" data-title="Pollution Is The Sign Of A Strong Economy!"
+<figure class="painting" data-category="available" data-title="Pollution is the Sign of a Strong Economy!"
         data-medium="oil on canvas" data-size="40x30" data-year="2019"
         data-full="pollution-is-sign-of-strong-economy-40x30.jpg">
-  <img src="pollution-is-sign-of-strong-economy-40x30.jpg" alt="Pollution Is The Sign Of A Strong Economy! Thumbnail">
-  <figcaption><strong>Pollution Is The Sign Of A Strong Economy!</strong><br>oil on canvas, 40x30, 2019</figcaption>
+  <img src="pollution-is-sign-of-strong-economy-40x30.jpg" alt="Pollution is the Sign of a Strong Economy! Thumbnail">
+  <figcaption><strong>Pollution is the Sign of a Strong Economy!</strong><br>oil on canvas, 40x30, 2019</figcaption>
 </figure>
 
 <figure class="painting" data-category="available" data-title="Princess"
