--- a/math/book.html
+++ b/math/book.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Contact | Kevin Knight</title>
+  <title>Book | Kevin Knight</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -17,14 +17,14 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
+    <h1 class="page-title">Book <a href="https://a.co/d/1TlDwVs">Available</a> on Amazon</h1>
     <div class="hero">
-      <img src="math-kook-cover.jpg" alt="Kevin Knight" class="headshot">
+      <img src="math-kook-cover.jpg" width="200" alt="Kevin Knight" class="headshot">
     </div>
   </header>
 
   <!-- Main content -->
   <main>
-	  <p class="intro"><a href="https://a.co/d/1TlDwVs">Available</a> on Amazon.</p>
   </main>
 
   <!-- Footer -->
