--- a/math/videos.html
+++ b/math/videos.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Paintings | Kevin Knight</title>
+  <title>Videos | Kevin Knight</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -17,11 +17,18 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
-    <h1 class="page-title">Math Kook Videos</h1>
+    <h1 class="page-title">Videos</h1>
   </header>
 
   <!-- Main content -->
   <main>
+
+
+https://www.youtube.com/@mathkook
+https://www.youtube.com/playlist?list=PL4lTtiG6es54CW3vr5yKm99TcTLAaE0kE
+https://www.youtube.com/watch?v=TxBRcwkRjmc
+
+
 
   </main>
 
