--- a/math/articles.html
+++ b/math/articles.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Contact | Kevin Knight</title>
+  <title>Articles | Kevin Knight</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -17,7 +17,7 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
-    <h1 class="page-title">Contact</h1>
+    <h1 class="page-title">Articles</h1>
   </header>
 
   <!-- Main content -->
