--- a/math/book.html
+++ b/math/book.html
@@ -17,9 +17,9 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
-    <h1 class="page-title">Book <a href="https://a.co/d/1TlDwVs">Available</a> on Amazon</h1>
+    <h1 class="page-title">Book <a href="https://a.co/d/1TlDwVs">available</a> on Amazon</h1>
     <div class="hero">
-      <img src="math-kook-cover.jpg" width="200" alt="Kevin Knight" class="headshot">
+      <img src="math-kook-cover.jpg" style="height:80%;" alt="Kevin Knight" class="headshot">
     </div>
   </header>
 
