--- a/math/videos.html
+++ b/math/videos.html
@@ -23,11 +23,15 @@
   <!-- Main content -->
   <main>
 
-	  <a href="https://www.youtube.com/@mathkook">Math Kook YouTube Channel"</a>
+	  <center>
+
+	  <a href="https://www.youtube.com/@mathkook">Math Kook YouTube Channel</a>
 	  <br><br>
-	  <a href="https://www.youtube.com/playlist?list=PL4lTtiG6es54CW3vr5yKm99TcTLAaE0kE">Collatz Conjecture Series"</a>
+	  <a href="https://www.youtube.com/playlist?list=PL4lTtiG6es54CW3vr5yKm99TcTLAaE0kE">Collatz Conjecture Series</a>
 	  <br><br>
-	  <a href="https://www.youtube.com/watch?v=TxBRcwkRjmc">Avoid the Collatz Conjecture at All Costs!"</a>
+	  <a href="https://www.youtube.com/watch?v=TxBRcwkRjmc">Avoid the Collatz Conjecture at All Costs!</a>
+
+	  </center>
 
   </main>
 
