--- a/math/articles.html
+++ b/math/articles.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <!-- Header with Navigation -->
   <header>
     <nav class="navbar">
       <ul>
@@ -20,22 +19,19 @@
     <h1 class="page-title">Articles</h1>
   </header>
 
-  <!-- Main content -->
   <main>
-    <center>
+    <div class="article-list">
+      <a href="https://hal.science/hal-04261183v1/document" class="article-card">
+        Collatz High Cycles Do Not Exist &nbsp;•&nbsp; PDF
+      </a>
 
-<p>
-"Collatz High Cycles Do Not Exist" (K. Knight), <A HREF="https://hal.science/hal-04261183v1/document">Get preprint in PDF</A>.
-<br>
-<p>
-"A Small Collatz Rule without the Plus One" (K. Knight), <A HREF="https://hal.science/hal-04080486v1/document">Get preprint in PDF</A>.
-
-    </center>
+      <a href="https://hal.science/hal-04080486v1/document" class="article-card">
+        A Small Collatz Rule without the Plus One &nbsp;•&nbsp; PDF
+      </a>
+    </div>
   </main>
 
-  <!-- Footer -->
-  <footer>
-    <p>&copy; 2025 Kevin Knight</p>
-  </footer>
+  <footer><p>&copy; 2025 Kevin Knight</p></footer>
 </body>
 </html>
+
