--- a/math/book.html
+++ b/math/book.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <!-- Header with Navigation -->
   <header>
     <nav class="navbar">
       <ul>
@@ -17,20 +16,16 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
-    <h1 class="page-title">Book <a href="https://a.co/d/1TlDwVs">available</a> on Amazon</h1>
-    <div class="hero">
-      <img src="math-kook-cover.jpg" style="height:80%;" alt="Kevin Knight" class="headshot">
-    </div>
+    <h1 class="page-title">Book <a href="https://a.co/d/1TlDwVs" target="_blank">available on Amazon</a></h1>
   </header>
 
-  <!-- Main content -->
   <main>
+    <div class="hero">
+      <img src="math-kook-cover.jpg" alt="Math Kook cover" class="book-cover">
+    </div>
   </main>
 
-  <!-- Footer -->
-  <footer>
-    <p>&copy; 2025 Kevin Knight</p>
-  </footer>
+  <footer><p>&copy; 2025 Kevin Knight</p></footer>
 </body>
 </html>
 
