--- a/math/contact.html
+++ b/math/contact.html
@@ -23,13 +23,9 @@
   <!-- Main content -->
   <main>
     <center>
-      <p>artist contact:</p>
+      <p>email: </p>
       <br>
     <p>kevin.crawford.knight@gmail.com</p> 
-      <br><br>
-    <p>purchase inquiries:</p>
-      <br>
-    <p>in.theory.originals@gmail.com</p>
     </center>
   </main>
 
