--- a/math/videos.html
+++ b/math/videos.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <!-- Header with Navigation -->
   <header>
     <nav class="navbar">
       <ul>
@@ -20,24 +19,35 @@
     <h1 class="page-title">Videos</h1>
   </header>
 
-  <!-- Main content -->
   <main>
+    <div class="gallery thumbs">
+      <!-- channel link -->
+      <a href="https://www.youtube.com/@mathkook" class="thumb">
+        <figure>
+          <img src="mathkook-channel.png" alt="Math Kook channel">
+          <figcaption>Math Kook YouTube Channel</figcaption>
+        </figure>
+      </a>
 
-	  <center>
+      <!-- playlist link -->
+      <a href="https://www.youtube.com/playlist?list=PL4lTtiG6es54CW3vr5yKm99TcTLAaE0kE" class="thumb">
+        <figure>
+          <img src="mathkook-playlist.png" alt="Collatz playlist">
+          <figcaption>Collatz Conjecture Series</figcaption>
+        </figure>
+      </a>
 
-	  <a href="https://www.youtube.com/@mathkook">Math Kook YouTube Channel</a>
-	  <br><br>
-	  <a href="https://www.youtube.com/playlist?list=PL4lTtiG6es54CW3vr5yKm99TcTLAaE0kE">Collatz Conjecture Series</a>
-	  <br><br>
-	  <a href="https://www.youtube.com/watch?v=TxBRcwkRjmc">Avoid the Collatz Conjecture at All Costs!</a>
-
-	  </center>
-
+      <!-- single video link -->
+      <a href="https://www.youtube.com/watch?v=TxBRcwkRjmc" class="thumb">
+        <figure>
+          <img src="mathkook-avoid.png" alt="Avoid the Collatz video">
+          <figcaption>Avoid the Collatz Conjecture!</figcaption>
+        </figure>
+      </a>
+    </div>
   </main>
 
-  <!-- Footer -->
-  <footer>
-    <p>&copy; 2025 Kevin Knight</p>
-  </footer>
+  <footer><p>&copy; 2025 Kevin Knight</p></footer>
 </body>
 </html>
+
