--- a/math/book.html
+++ b/math/book.html
@@ -16,10 +16,12 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
-    <h1 class="page-title">Book <a href="https://a.co/d/1TlDwVs" target="_blank">available on Amazon</a></h1>
+    <h1 class="page-title">Book</h1>
   </header>
 
-  <main>
+  <main> 
+	  <p><a href="https://a.co/d/1TlDwVs" target="_blank">available</a> on amazon</h1></p>
+	  <br>
     <div class="hero">
       <img src="math-kook-cover.jpg" alt="Math Kook cover" class="book-cover">
     </div>
