--- a/math/book.html
+++ b/math/book.html
@@ -20,7 +20,9 @@
   </header>
 
   <main> 
+	  <center>
 	  <p><a href="https://a.co/d/1TlDwVs" target="_blank">available</a> on amazon</h1></p>
+	  </center>
 	  <br>
     <div class="hero">
       <img src="math-kook-cover.jpg" alt="Math Kook cover" class="book-cover">
