--- a/comics/index.html
+++ b/comics/index.html
@@ -17,8 +17,8 @@
       </ul>
     </nav>
     <div class="hero">
-      <img src="tofu-buffet-wide.jpg" alt="Kevin Knight" class="headshot">
-      <h1>Kevin Knight</h1>
+      <img src="tofu-buffet-banner.png" alt="Tofu Buffet" class="headshot">
+      <h1>Tofu Buffet</h1>
     </div>
   </header>
 
@@ -29,7 +29,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2025 Kevin Knight</p>
+    <p>&copy; 2025 Tofu Buffet</p>
   </footer>
 </body>
 </html>
