--- a/comics/book.html
+++ b/comics/book.html
@@ -19,14 +19,19 @@
   </header>
 
   <main> 
-	  <p><a href="../comics/index.html" target="_blank">coming</a> on amazon</h1></p>
+	  <center>
+	  <p>coming to amazon</p>
+<!--
+	  <p><a href="../comics/index.html" target="_blank">available</a> on amazon</h1></p>
+-->
+	  </center>
 	  <br>
     <div class="hero">
       <img src="tofu-buffet-cover.jpg" alt="Tofu Buffet cover" class="book-cover">
     </div>
   </main>
 
-  <footer><p>&copy; 2025 Kevin Knight</p></footer>
+  <footer><p>&copy; 2025 Tofu Buffet</p></footer>
 </body>
 </html>
 
