--- a/comics/comics.html
+++ b/comics/comics.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Book | Kevin Knight</title>
+  <title>Comics | Kevin Knight</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -11,24 +11,17 @@
     <nav class="navbar">
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="comics.html">Comics</a></li>
+        <li><a href="book.html">Book</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
-    <h1 class="page-title">Book</h1>
+    <h1 class="page-title">Comics</h1>
   </header>
 
   <main> 
-	  <center>
-	  <p>coming to amazon</p>
-<!--
-	  <p><a href="../comics/index.html" target="_blank">available</a> on amazon</h1></p>
--->
-	  </center>
-	  <br>
-    <div class="hero">
-      <img src="tofu-buffet-cover.png" alt="Tofu Buffet cover" class="book-cover">
-    </div>
+
+
+
   </main>
 
   <footer><p>&copy; 2025 Tofu Buffet</p></footer>
