--- a/art/book.html
+++ b/art/book.html
@@ -24,7 +24,7 @@
 
   <!-- Main content -->
   <main>
-    <p class="intro">Available on Amazon.</p>
+    <p class="intro">available on amazon</p>
   </main>
 
   <!-- Footer -->
