--- a/fiction/stories.html
+++ b/fiction/stories.html
@@ -18,10 +18,12 @@
     <h1 class="page-title">Stories</h1>
   </header>
 
-  <main> 
-	  <center>
-
-	  </center>
+  <main>
+    <div class="article-list">
+      <a href="genko-kitsu-knight.pdf" class="article-card">
+        Kitsu Went Missing (in Japanese) &nbsp;•&nbsp; PDF
+      </a>
+    </div>
   </main>
 
   <footer><p>&copy; 2025 Kevin Knight</p></footer>
