--- a/ai/articles.html
+++ b/ai/articles.html
@@ -12,7 +12,7 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="students.html">Students</a></li>
-        <li><a href="https://kevincrawfordknight.github.io/vita/CV_Knight.pdf" target="_blank">CV</a></li>
+        <li><a href="https://kevincrawfordknight.github.io/vita/CV_Knight.pdf">CV</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
