--- a/ai/contact.html
+++ b/ai/contact.html
@@ -12,9 +12,10 @@
     <nav class="navbar">
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="videos.html">Videos</a></li>
-        <li><a href="book.html">Book</a></li>
         <li><a href="articles.html">Articles</a></li>
+        <li><a href="students.html">Students</a></li>
+        <li><a href="https://kevincrawfordknight.github.io/vita/CV_Knight.pdf">CV</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
     <h1 class="page-title">Contact</h1>
