--- a/art/book.html
+++ b/art/book.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Contact | Kevin Knight</title>
+  <title>Book | Kevin Knight</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -17,6 +17,7 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
+    <h1 class="page-title">Book</h1>
     <div class="hero">
       <img src="in-theory-cover-final2.png" alt="Kevin Knight" class="headshot">
     </div>
