--- a/newindex.html
+++ b/newindex.html
@@ -7,38 +7,26 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
+  <header>
+    <h1 class="site-name">Kevin Knight</h1>
+  </header>
+
   <main class="button-grid">
-
-
-    <a href="ai/index.html" aria-label="AI">
-      <img src="button-ai.png" alt="AI">
-    </a>
-
-    <a href="art/index.html" aria-label="Art">
-      <img src="button-art.png" alt="ART">
-    </a>
-
-    <a href="math/index.html" aria-label="Math">
-      <img src="button-math.png" alt="MATH">
-    </a>
-
-    <a href="comics/index.html" aria-label="Tofu Buffet">
-      <img src="button-comics.png" alt="TOFU BUFFET">
-    </a>
-
-    <a href="fiction/index.html" aria-label="Fiction">
-      <img src="button-fiction.png" alt="FICTION">
-    </a>
-
-    <a href="movies/index.html" aria-label="Movies & TV">
-      <img src="button-movies.png" alt="MOVIES TV">
-    </a>
-
-    <a href="index.html" aria-label="Classic Home Page">
-      <img src="button-classic.png" alt="CLASSIC HOME PAGE">
-    </a>
-
+    <!-- order: ai, art, math, comics, fiction, movies, classic -->
+    <a href="ai/index.html"      aria-label="AI">      <img src="button-ai.png"      alt="AI"></a>
+    <a href="art/index.html"     aria-label="Art">     <img src="button-art.png"     alt="ART"></a>
+    <a href="math/index.html"    aria-label="Math">    <img src="button-math.png"    alt="MATH"></a>
+    <a href="comics/index.html"  aria-label="Comics">  <img src="button-comics.png"  alt="TOFU BUFFET"></a>
+    <a href="fiction/index.html" aria-label="Fiction"> <img src="button-fiction.png" alt="FICTION"></a>
+    <a href="movies/index.html"  aria-label="Movies">  <img src="button-movies.png"  alt="MOVIES TV"></a>
+    <a href="index.html"         aria-label="Classic"> <img src="button-classic.png" alt="CLASSIC HOME PAGE"></a>
   </main>
+
+  <footer>
+    <p>&copy; 2025 Kevin Knight</p>
+  </footer>
+
 </body>
 </html>
 
