--- a/newindex.html
+++ b/newindex.html
@@ -8,9 +8,11 @@
 </head>
 <body>
 
+	<center>
   <header>
     <h1 class="site-name">Kevin Knight</h1>
   </header>
+	</center>
 
   <main class="button-grid">
     <!-- order: ai, art, math, comics, fiction, movies, classic -->
