--- a/fiction/index.html
+++ b/fiction/index.html
@@ -24,7 +24,7 @@
 
   <!-- Main content -->
   <main>
-    <p class="intro">Welcome to browse our comic.</p>
+    <p class="intro">Welcome to browse my writing.</p>
   </main>
 
   <!-- Footer -->
