--- a/movies/contact.html
+++ b/movies/contact.html
@@ -12,9 +12,8 @@
     <nav class="navbar">
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="videos.html">Videos</a></li>
-        <li><a href="book.html">Book</a></li>
-        <li><a href="articles.html">Articles</a></li>
+        <li><a href="movies.html">Movies</a></li>
+        <li><a href="tv.html">TV</a></li>
       </ul>
     </nav>
     <h1 class="page-title">Contact</h1>
