--- a/newindex.html
+++ b/newindex.html
@@ -16,6 +16,7 @@
 
   <main class="button-grid">
     <!-- order: ai, art, math, comics, fiction, movies, classic -->
+    <a href="newindex.html"      aria-label="Pic">      <img src="headshot-kk.jpg"      alt="Pic"></a>
     <a href="ai/index.html"      aria-label="AI">      <img src="button-ai.png"      alt="AI"></a>
     <a href="art/index.html"     aria-label="Art">     <img src="button-art.png"     alt="ART"></a>
     <a href="math/index.html"    aria-label="Math">    <img src="button-math.png"    alt="MATH"></a>
